# topics-ai-ds

./: README.md
in-vehicle-coupon-recommendation/: README.md  analysis.ipynb  pyproject.toml
in-vehicle-coupon-recommendation/data/: X_test.csv  X_train.csv  in-vehicle-coupon-recommendation-uevora.csv
in-vehicle-coupon-recommendation/tests/: __init__.py
w2-prolog/: genealogy.pl
