[tool.poetry]
name = "in-vehicle-coupon-recommendation"
version = "0.1.0"
description = ""
authors = ["hjoaquim <h.joaquim@campus.fct.unl.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
